policies/templates/gcp_gke_enable_private_google_access_v1.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Check to see if GKE private monitoring is enabled
# https://cloud.google.com/monitoring/kubernetes-engine/

apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-gke-enable-private-google-access-v1
spec:
  crd:
    spec:
      names:
        kind: GCPGKEEnablePrivateGoogleAccessConstraintV1
        plural: gcpgkeenableprivategoogleaccessconstraintsv1
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    validation.gcp.forsetisecurity.org:
      rego: | #INLINE("validator/gke_enable_private_google_access.rego")
            #
            # Copyright 2019 Google LLC
            #
            # Licensed under the Apache License, Version 2.0 (the "License");
            # you may not use this file except in compliance with the License.
            # You may obtain a copy of the License at
            #
            #      http://www.apache.org/licenses/LICENSE-2.0
            #
            # Unless required by applicable law or agreed to in writing, software
            # distributed under the License is distributed on an "AS IS" BASIS,
            # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            # See the License for the specific language governing permissions and
            # limitations under the License.
            #
            
            package templates.gcp.GCPGKEEnablePrivateGoogleAccessConstraintV1
            
            import data.validator.gcp.lib as lib
            
            deny[{
            	"msg": message,
            	"details": metadata,
            }] {
            	constraint := input.constraint
            	asset := input.asset
            	asset.asset_type == "container.googleapis.com/Cluster"
            
            	cluster := asset.resource.data
            	private_google_access_disabled(cluster)
            
            	message := sprintf("Private Google access is disabled in cluster %v.", [asset.name])
            	metadata := {"resource": asset.name}
            }
            
            ###########################
            # Rule Utilities
            ###########################
            private_google_access_disabled(cluster) {
            	networkConfig := lib.get_default(cluster, "networkConfig", {})
            	subnetworkName := networkConfig.subnetwork
            	fullSubnetworkName := concat("", ["//compute.googleapis.com/", subnetworkName])
            	subnetworkAsset := lib.get_resource(data.inventory, "compute.googleapis.com/Subnetwork", fullSubnetworkName)
            	subnetwork := subnetworkAsset.resource.data
            	privateIpGoogleAccess := lib.get_default(subnetwork, "privateIpGoogleAccess", false)
            	privateIpGoogleAccess != true
            }
            #ENDINLINE
